# OpenGL_Boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  README.md  build.bat
include/: APP.hpp  APP_Settings.hpp  Settings.hpp  SettingsRenderer.hpp  ViewportRenderer.hpp  ViewportSettings.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
renderers/include/: DefaultSettingsRenderer.hpp  DefaultViewportRenderer.hpp
renderers/src/: DefaultSettingsRenderer.cpp  DefaultViewportRenderer.cpp
src/: APP.cpp  APP.hpp  APP_Settings.cpp  Settings.cpp  SettingsRenderer.cpp  ViewportRenderer.cpp  ViewportSettings.cpp  application.cpp  application.hpp  demo.cpp  load_frame.cpp  main.cpp  old.cpp  test.cpp
